[package]
name = "firefly-cardanoconnect"
version = "0.6.1"
description = "An implementation of the FireFly Connector API for Cardano"
license-file.workspace = true
publish = false
edition = "2024"
repository = "https://github.com/hyperledger-firefly/cardano"

[dependencies]
aide = { version = "0.15", features = ["axum", "axum-json", "axum-query"] }
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "ws"] }
balius-core = { git = "https://github.com/txpipe/balius", rev = "fba749e" }
balius-runtime = { git = "https://github.com/txpipe/balius", rev = "fba749e" }
blockfrost = { version = "1", default-features = false, features = ["rustls-tls"] }
blockfrost-openapi = "0.1.69"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
dashmap = "6"
futures = "0.3"
pallas-addresses = "1"
pallas-codec = "1"
pallas-crypto = "1"
pallas-primitives = "1"
pallas-network = "1"
pallas-traverse = "1"
pallas-utxorpc = "1"
firefly-server = { path = "../firefly-server" }
hex = "0.4"
minicbor = "0.26"
num-rational = "0.4"
num-traits = "0.2"
rand = "0.10"
rand_chacha = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
refinery = { version = "0.9", features = ["rusqlite"] }
rusqlite = { version = "0.37", features = ["bundled"] }
schemars = "1.2"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-rusqlite = { version = "0.7" }
tracing = "0.1"
ulid = "1"
utxorpc-spec = "0.18"
