[package]
name = "firefly-cardanosigner"
version = "0.7.0"
description = "A service managing keys and signing for the FireFly Cardano connector"
license-file.workspace = true
publish = false
edition = "2024"
repository = "https://github.com/hyperledger-firefly/cardano"

[dependencies]
aide = { version = "0.15", features = ["axum", "axum-json"] }
axum = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
firefly-server = { path = "../firefly-server" }
hex = "0.4"
minicbor = "0.26"
pallas-addresses = "1"
pallas-crypto = "1"
pallas-primitives = "1"
schemars = "0.9"
serde = "1"
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
